--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^5.13.5",
     "firebase": "^9.17.2",
     "localforage": "^1.10.0",
+    "photoswipe": "^5.3.8",
     "react": "latest",
     "react-dom": "latest",
+    "react-photoswipe-gallery": "^2.2.7",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "latest",
