fix redirect with hashRouter

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "PalomaYPablo-Wedding",
+  "name": "paloma-pablo-wedding",
   "version": "5.0.0",
   "private": true,
+  "homepage": "https://devtest.pabloypaloma.site",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
